<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.beesden.commerce</groupId>
    <artifactId>commerce</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <properties>
        <hibernate.validator.version>5.2.4.Final</hibernate.validator.version>
        <hsql.version>2.3.4</hsql.version>
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <mysql.version>5.1.39</mysql.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring.boot.version>2.0.6.RELEASE</spring.boot.version>
        <spring.cloud.version>2.0.2.RELEASE</spring.cloud.version>

    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>Finchley.SR2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.10</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <modules>
        <module>common</module>
        <module>service-register</module>

        <!-- APIs -->
        <module>catalogue</module>
        <module>search</module>
        <!--
        <module>content</module>
        <module>reviews</module>
        -->

        <!-- Web Apps -->
        <!-- TODO -->

    </modules>

</project>
